--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,5 +1,4 @@
 name: 🚀 Run
-
 on:
   pull_request:
     types: [opened]
@@ -7,7 +6,6 @@ on:
     tags:
       - '*'
   workflow_dispatch:
-
 jobs:
   run:
     name: 🚀 Run
@@ -17,7 +15,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
       - name: Install Deps
         run: |
           python -m pip install --upgrade pip
@@ -37,8 +34,8 @@ jobs:
 
       - name: Install Deps
         run: |
-          python -m pip install --upgrade pip
-          pip install doxygen
+          apt install -y doxygen
+          sudo apt install -y doxygen
       - name: Generate Doxygen
         shell: bash
         run: |
