--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Install Deps
         run: |
-          apt install -y doxygen
+          sudo apt install -y doxygen
           sudo apt install -y doxygen
       - name: Generate Doxygen
         shell: bash
